# new-bucika-gsr

./: .gitignore  BACKLOG.md  BUILD_AND_SETUP.md  BUILD_FIX_STRATEGY.md  CHANGELOG.md  CI_CD_README.md  CODE_QUALITY_ANALYSIS.md  COPILOT_GUIDELINES.md  FUTURE_ENHANCEMENTS.md  GRADLE_SETUP.md  IMPLEMENTATION_SUMMARY.md  KOTLIN_QUALITY_CHECKLIST.md  PC_ORCHESTRATOR_GUIDE.md  QUALITY_GATES_CONFIG.md  QUALITY_IMPROVEMENT_PLAN.md  QUALITY_METRICS_ANALYSIS.md  README.md  RUN_CONFIGURATIONS.md  build.bat  build.gradle  build.gradle.kts  build.gradle.source  build.sh  consolidate_app_setup.gradle  consolidate_build.gradle  depend.gradle  dependency-check-suppressions.xml  dependency-check-suppressions.xml.backup  final_quality_validation.json  gradle.properties  gradle.properties.source  requirements.txt  run-tests.sh  settings.gradle  setup-dev.sh  setup.py  shared.gradle  validate_setup.sh
app/: .aiignore  .copilotignore  .editorconfig  .flake8  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .vale.ini  README.md  TEST_CONSOLIDATION_SUMMARY.md  android_connection_demo.py  android_device_testing_demo.py  architecture.md  backlog.md  build.gradle  build_native.sh  changelog.md  codecov.yml  conftest.py  detekt.yml  environment.yml  firestore.rules  gradle.properties  gradlew  gradlew.bat  junit.xml  pc_server_helper.py  pyproject.toml  pytest.ini  qodana.yaml  quick_setup_devices.py  references.bib  run_local_tests.bat  run_local_tests.ps1  run_local_tests.py  run_local_tests.sh  settings.gradle  setup_native.py  test-requirements.txt  (+3 more)
app/.github/: copilot-instructions.md  dependabot.yml
app/.github/workflows/: README.md  chapter5-fast-lane.yml  chapter5-nightly-integration.yml  chapter5-release-validation.yml  complete-testing.yml  dependency-management.yml  main-ci-cd.yml  security-and-quality.yml
app/.junie/: guidelines.md
app/.vale-styles/Microsoft/: Acronyms.yml  Gender.yml  Terms.yml  We.yml  Wordiness.yml
app/.vale-styles/alex/: Ablist.yml  Gendered.yml  ProfanityUnlikely.yml  README.md  Race.yml
app/.vale-styles/proselint/: Diacritical.yml  Nonwords.yml  Spelling.yml
app/.vale-styles/write-good/: TooWordy.yml
app/AndroidApp/: .gitignore.tests  README.md  build.gradle  build.gradle.kts  validate_shimmer_integration.sh
app/AndroidApp/docs/: feature_comparison_matrix.md  shimmer_integration_comparison.md  shimmer_pro_ui_enhancement.md  ui_transformation_visual.md
app/PythonApp/: README.md  application.py  build.gradle  calibration_quality_assessment.py  cross_device_calibration_coordinator.py  hand_segmentation_cli.py  main.py  main_with_web.py  master_clock_synchronizer.py  ntp_time_server.py  performance_optimizer.py  real_time_calibration_feedback.py  shimmer_manager.py  shimmer_pc_app.py  stimulus_manager.py  web_launcher.py
app/PythonApp/calibration/: calibration.py  calibration_manager.py  calibration_processor.py  calibration_result.py
app/PythonApp/config/: configuration_manager.py  system_configuration.py  webcam_config.py
app/PythonApp/error_handling/: recovery_manager.py
app/PythonApp/gui/: calibration_dialog.py  common_components.py  device_panel.py  dual_webcam_main_window.py  file_browser_dialog.py  main_controller.py  main_window.py  multi_sensor_gui.py  preview_panel.py  session_review_dialog.py  stimulus_controller.py  stimulus_panel.py
app/PythonApp/hand_segmentation/: __init__.py  models.py  post_processor.py  segmentation_engine.py  utils.py
app/PythonApp/native_backends/: __init__.py  native_shimmer_wrapper.py  native_webcam_wrapper.py
app/PythonApp/network/: android_device_manager.py  device_client.py  device_server.py  file_integrity.py  lsl_integration.py  pc_server.py  security.py  zeroconf_discovery.py
app/PythonApp/protocol/: __init__.py  config_loader.py  handshake_manager.py  protocol.py  schema_utils.py
app/PythonApp/recording/: data_recorder.py
app/PythonApp/session/: session_logger.py  session_manager.py  session_recovery.py  session_synchronizer.py
app/PythonApp/shimmer/: __init__.py  connection_handler.py  data_processor.py  device_models.py  shimmer_imports.py
app/PythonApp/synchronization/: ntp_lab_protocols.py
app/PythonApp/thermal/: radiometric_processor.py
app/PythonApp/utils/: android_connection_detector.py  logger.py  logging_config.py  system_monitor.py
app/PythonApp/web_ui/: integration.py  web_controller.py  web_dashboard.py
app/PythonApp/webcam/: advanced_sync_algorithms.py  cv_preprocessing_pipeline.py  dual_webcam_capture.py  webcam_capture.py
app/config/: build-helpers.gradle  dependencies.gradle  flavors.gradle  packaging.gradle
app/docs/: FIREBASE_ANALYTICS_DASHBOARDS.md  FIREBASE_INTEGRATION.md  FIREBASE_INTEGRATION_ENHANCED.md  FIREBASE_PRODUCTION_SETUP.md  NETWORK_SETUP_GUIDE.md  SHIMMER_INTEGRATION_GUIDE.md  THERMAL_CAMERA_INTEGRATION_GUIDE.md  camera_preview_fixes.md
app/docs/adr/: README.md  adr-001-reactive-state-management.md  adr-002-strict-type-safety.md  adr-003-function-decomposition-strategy.md  adr-004-ui-component-unification.md  adr-005-camera-preview-switching.md  adr-006-device-initialization-timing.md  adr-template.md
app/docs/api/: README.md  shimmer-api.md  shimmer-usage-examples.md
app/docs/appendices/: APPENDIX_H_TESTING_PROCEDURES.md
app/docs/diagrams/: 4k_diagrams_summary.md  chapter3_diagrams.md  mermaid_1.md  mermaid_2.md  mermaid_3.md  mermaid_4.md  mermaid_5.md  mermaid_6.md  mermaid_appendices.md  mermaid_chapter2_conversion.md  mermaid_chapter4_conversion.md  mermaid_chapter5_conversion.md  mermaid_chapter6_conversion.md  mermaid_diagrams_improved.md  mermaid_fake_implementations_cleanup.md  mermaid_references_integration.md  (+3 more)
app/gradle/: libs.versions.toml
app/native_backend/: CMakeLists.txt  README.md
app/shared_protocols/: __init__.py  data_structures.py  network_protocol.py  system_monitoring.py
app/tests_unified/: CROSS_PLATFORM_GUIDE.md  GETTING_STARTED.md  GITHUB_WORKFLOWS.md  INFRASTRUCTURE_SUMMARY.md  README.md  android_device_complete_tests.py  android_test_integration.py  test_android_device_complete.py
(+2498 files in other folders)
